--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@
     width: 300px;
     margin: 50px auto;
     text-align: center;
+}
+label{
+    display:inline-block;
+    width: 120px;
+    text-align: left;
+}
+input [type="numero"], select{
+    width: 180px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
 
-
+button {
+    margin-top: 10px;
+    padding: 8px 20px;
+    font-size: 16px;
 }
